[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/towers/missile.png" type="Texture" id=1]
[ext_resource path="res://src/Missile.gd" type="Script" id=2]
[ext_resource path="res://assets/cloud_particle.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/asteroid_explode.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 32, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 32, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idling",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 13.7735, 5.74459 )

[sub_resource type="RectangleShape2D" id=8]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.539216, 0.862745, 1 )
colors = PoolColorArray( 0.702148, 0.596552, 0, 1, 0.795898, 0.284472, 0, 1, 0.176471, 0.176471, 0.176471, 1, 0, 0, 0, 1 )

[node name="Missile" type="KinematicBody2D"]
scale = Vector2( 1.4, 1.4 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1.08952 )
frames = SubResource( 6 )
animation = "idling"
frame = 2
playing = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 7 )

[node name="AreaDamage" type="Area2D" parent="." groups=[
"Missle",
]]
position = Vector2( 16, 0 )
scale = Vector2( 1e-05, 1e-05 )
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage"]
scale = Vector2( 6, 6 )
shape = SubResource( 8 )

[node name="ParticleTimer" type="Timer" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 10.9138, 0 )
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
speed_scale = 1.26
explosiveness = 0.1
randomness = 0.13
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 40.0
direction = Vector2( 0, 0 )
spread = 60.65
gravity = Vector2( 0, 0 )
radial_accel = 8.7
radial_accel_random = 0.16
__meta__ = {
"_editor_description_": ""
}

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( -5.52448, 0.102591 )
amount = 15
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
gravity = Vector2( -150, 0 )
color_ramp = SubResource( 9 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="ParticleTimer" to="." method="_on_ParticleTimer_timeout"]
